# eastStar

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-packages.sh  build.rs  install.sh  uninstall.sh
data/: com.ppmuzyk.eaststar.desktop  com.ppmuzyk.eaststar.metainfo.xml
docs/: architecture.md  pi-worker.md
scripts/: pi-task.sh
src/: app.rs  lib.rs  lock.rs  main.rs  platform.rs  saver.rs  settings.rs  visual.rs  visual.rs.bak
src/visual/: mod.rs  nebula.rs  pipes.rs  plasma.rs
